FIX: entity code aligns & etichette aligns

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ button{
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
+
 }
 
 .circle-check{
@@ -118,6 +119,7 @@ button{
 .circle-cross{
     color: red;
     border-color: red;
+    line-height: 19px;
 }
 
 
